# openenv-email-triage

./: .gitignore  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
.hypothesis/constants/: 03f95c9381513230  0b6377447afcf9ae  6ad84fe56c3b5cab  da39a3ee5e6b4b0d  e5e4cb03270dca71  e971c3c831b5a383
.hypothesis/tmp/: tmp2flft7b7  tmp5hn3ef93  tmpdodja48c
.kiro/specs/openenv-email-triage/: design.md  requirements.md  tasks.md
atlas_eco/: env.py  models.py  server.py  tasks.py
data/: emails.json
email_triage/: env.py  models.py  reward.py  server.py  tasks.py
server/: app.py
tests/: test_api.py  test_dataset.py  test_env_core.py  test_graders.py  test_inference.py  test_models.py  test_openenv_yaml.py  test_reward_shaper.py
