[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-email-triage"
version = "1.0.0"
description = "A real-world RL environment where an AI agent triages a synthetic corporate inbox."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic>=2.0",
    "openai",
    "hypothesis",
    "pytest",
    "pyyaml",
    "httpx"
]

[tool.setuptools.packages.find]
include = ["email_triage*"]
