[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "atlas-greenpath"
version = "1.0.0"
description = "Eco-resilient logistics environment for OpenEnv hackathon."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic>=2.0",
    "openai",
    "pyyaml",
    "httpx"
]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
include = ["atlas_eco*", "server*"]
